...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:orientation="vertical">

    <include
        android:id="@+id/topPanel"
        layout="@layout/activity_online_consultation_head_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />

...
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/ll_first"
                style="@style/leba_bg_layout"
                android:layout_marginTop="10dip">

                <LinearLayout
                    android:id="@+id/ll_top"
                    style="@style/leba_bg_top_layout"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_head"
                        android:layout_width="50dip"
...
                        </LinearLayout>

                    </LinearLayout>


                    <ImageView
                        android:id="@+id/iv_phone"
                        android:layout_width="48dip"
                        android:layout_height="48dip"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="20dip"
                        android:src="@mipmap/r_dial" />
...
                    android:layout_width="fill_parent"
                    android:layout_height="1.0px"
                    android:layout_below="@+id/ll_top"
                    android:background="@drawable/leba_shape_line" />

                <LinearLayout
                    android:id="@+id/ll_data"
                    style="@style/leba_bg_bottom_layout"
                    android:layout_below="@+id/view_top"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ll_idcard"
                        style="@style/ll_bg_mid_layout"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
...
                        android:layout_width="240dp"
                        android:layout_height="60dp"
                        android:layout_alignParentStart="true"
                        android:scrollbars="none" />

                    <TextView
                        android:id="@+id/addseverpake_btn"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:background="@mipmap/add_qianyuebtn_bg"
...
