...
    <!--<string name="xunfei_app_id">5923dffb</string>-->
    <string name="login_page_app_name">护理</string>
    <string name="login_page_app_client_type">居民端</string>

    <string name="index_page_title">安徽救助工作平台</string>
    <string name="index_page_policy_translate">政策新闻</string>
    <string name="index_page_policy_more">更多></string>
    <string name="index_page_remind">智能履约提醒</string>
    <string name="index_page_show_family_remind">显示家庭成员提醒></string>
    <string name="index_page_message_sent_by_doctor_hint">医生消息</string>

    <string name="remind_page_call_doctor">一键呼叫医生</string>

    <string name="index_default_area_name">全市</string>
    <string name="hint_select_area">请选择区域</string>
...
    <string name="hint_confirm_to_read_sign_service_assess_item">确定要阅读此条评价吗?阅读后将收入已查阅列表。</string>

    <string name="hint_accumulated_assess_star_level">累计评价星级</string>
    <string name="hint_total_paid_package">总有偿包</string>

    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

    <string name="send">发送</string>

    <string name="back">返回</string>
    <string name="color_preset">预设</string>
    <string name="color_custom">自定义颜色</string>
...
    <string name="relationship_daughter">女</string>
    <string name="relationship_grandson">孙子</string>
    <string name="relationship_granddaughter">孙女、外孙子、外孙女</string>
    <string name="relationship_parent">父母</string>
    <string name="relationship_grand_parent">祖父母、外祖父母</string>
    <string name="relationship_sibling">兄弟姐妹</string>
    <string name="relationship_other">其他</string>
    <string name="relationship_daughter_in_law">儿媳</string>

    <string name="register_hint_nickname_empty">昵称不能为空</string>
    <string name="register_hint_nickname_invalid">昵称不合法</string>
    <string name="register_hint_id_card_empty">身份证号不能为空</string>
    <string name="register_hint_id_card_invalid">身份证号不合法</string>
...
    <string name="retrieve_password_hint_confirm_password_invalid">确认密码不合法</string>
    <string name="retrieve_password_hint_two_password_not_equal">两次密码不一致</string>

    <string name="add_family_member_not_select_relationship">请选择与登录用户的关系</string>
    <string name="add_family_member_hint_name_empty">家庭成员名称不能为空</string>

    <string name="activity_title_login">登录</string>
    <string name="activity_title_treatment">诊断</string>
    <string name="activity_title_chat">聊天</string>
    <string name="activity_title_medical_institution">医疗机构</string>
    <string name="activity_title_medical_institution_info">医院信息</string>
    <string name="activity_title_canhe_info">参合信息</string>
    <string name="activity_title_canhe_detail_info">参合详情</string>
...
    <string name="hint_no_find_info_please_click_to_reload">暂无待办发现信息,点我刷新</string>
    <string name="hint_no_appointment_execution_info_please_click_to_reload">暂无预约执行信息,点我刷新</string>
    <string name="hint_no_signed_resident_directory_please_click_to_reload">暂无签约居民通讯录信息,点我刷新</string>
    <string name="hint_no_town_level_directory_please_click_to_reload">暂无乡镇级医疗机构通讯录,点我刷新</string>
    <string name="hint_no_village_level_directory_please_click_to_reload">暂无村级医疗机构通讯录,点我刷新</string>
    <string name="hint_no_doctor_level_directory_please_click_to_reload">暂无医疗人员通讯录,点我刷新</string>
    <string name="hint_no_latest_7_days_need_execution_projects_please_click_to_reload">暂无近7天需要执行项目,点我刷新</string>
    <string name="hint_no_timeout_not_execution_projects_please_click_to_reload">暂无超时未执行项目,点我刷新</string>
    <string name="hint_no_consultation">暂无相关信息</string>
    <string name="siged_sever_name">服务包详情</string>
    <string name="hint_no_room_consultation">该楼层没有房间信息</string>

    <string name="intelligent_honour_agreement_remind">智能履约提醒</string>
...
