...
    android:orientation="vertical"
    android:background="#eeeeee"
    tools:context="com.jqsoft.nursing.di.ui.activity.DetailPeopleInfoActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorTheme"
        app:contentInsetStart="0.0dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
...
            android:text="签约居民信息"
            android:textColor="@color/colorWhite"
            android:textAppearance="@style/ToolBar.Title"
            android:layout_gravity="center"/>

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/dp_3">
...
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="54dip">

        <RelativeLayout
            android:id="@+id/rl_execu"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content">
            <ImageView

...
                android:layout_below="@+id/iv_execu"
                android:layout_width="wrap_content"
                android:layout_height="20dip" />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_accessfile"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_centerHorizontal="true"
...
                android:layout_below="@+id/iv_record"
                android:layout_width="wrap_content"
                android:layout_height="20dip" />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_updateinfo"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_centerHorizontal="true"
...
