...
                    android:layout_height="@dimen/dp_18"
                    android:scaleType="fitXY"
                    android:src="@mipmap/r_person_new" />

                <android.support.v7.widget.AppCompatEditText
                    android:textColorHint="#97B5E8"
                    android:id="@+id/acet_username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/login_please_input_username"
...
                    android:layout_width="@dimen/dp_18"
                    android:layout_height="@dimen/dp_18"
                    android:scaleType="fitXY"
                    android:src="@mipmap/r_password_new" />
                <android.support.v7.widget.AppCompatEditText
                    android:textColorHint="#97B5E8"
                    android:id="@+id/acet_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/login_please_input_password"
...
                        android:layout_width="@dimen/img_width_small"
                        android:layout_height="@dimen/img_height_small"
                        android:background="@mipmap/clear_blue" />

                    <Button
                        android:visibility="gone"
                        android:id="@+id/bt_password_eye"
                        android:layout_width="@dimen/img_width_small"
                        android:layout_height="@dimen/img_height_small"
                        android:layout_marginLeft="@dimen/margin_normal"
                        android:background="@mipmap/eye_open_gray" />
                </LinearLayout>

...
                    app:gMarkSize="22dp" />


            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/bt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_18"
                android:background="@drawable/green_background_corner_radius_login_btn"
                android:text="@string/login"
                android:textColor="@color/white"
...
