//package com.jqsoft.grassroots_civil_administration_platform.di.ui.activity;
//
//
//import android.app.Activity;
//import android.support.test.espresso.Espresso;
//import android.support.test.espresso.IdlingResource;
//import android.support.test.espresso.ViewInteraction;
//import android.support.test.espresso.contrib.RecyclerViewActions;
//import android.support.test.rule.ActivityTestRule;
//import android.support.test.runner.AndroidJUnit4;
//import android.support.test.runner.lifecycle.ActivityLifecycleMonitorRegistry;
//import android.support.test.runner.lifecycle.Stage;
//import android.test.suitebuilder.annotation.LargeTest;
//import android.view.View;
//import android.view.ViewGroup;
//import android.view.ViewParent;
//
//import com.jqsoft.nursing.R;
//import com.jqsoft.nursing.util.Util;
//import com.jqsoft.nursing.utils.LogUtil;
//
//import org.hamcrest.Description;
//import org.hamcrest.Matcher;
//import org.hamcrest.TypeSafeMatcher;
//import org.hamcrest.core.IsInstanceOf;
//import org.junit.Rule;
//import org.junit.Test;
//import org.junit.runner.RunWith;
//
//import java.util.Collection;
//
//import static android.support.test.espresso.Espresso.onView;
//import static android.support.test.espresso.action.ViewActions.click;
//import static android.support.test.espresso.action.ViewActions.closeSoftKeyboard;
//import static android.support.test.espresso.action.ViewActions.pressImeActionButton;
//import static android.support.test.espresso.action.ViewActions.replaceText;
//import static android.support.test.espresso.action.ViewActions.scrollTo;
//import static android.support.test.espresso.assertion.ViewAssertions.matches;
//import static android.support.test.espresso.contrib.RecyclerViewActions.actionOnItemAtPosition;
//import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
//import static android.support.test.espresso.matcher.ViewMatchers.withContentDescription;
//import static android.support.test.espresso.matcher.ViewMatchers.withId;
//import static android.support.test.espresso.matcher.ViewMatchers.withParent;
//import static android.support.test.espresso.matcher.ViewMatchers.withTagValue;
//import static android.support.test.espresso.matcher.ViewMatchers.withText;
//import static org.hamcrest.Matchers.allOf;
//
//@LargeTest
//@RunWith(AndroidJUnit4.class)
//public class AllActivityTest {
//    public static final int TRANSITION_DELAY=1000;
//
//    @Rule
//    public ActivityTestRule<LoginActivityNew> mActivityTestRule = new ActivityTestRule<>(LoginActivityNew.class);
//
//
//
//    public Activity getActivityInstance(){
//        final Activity[] currentActivity = {null};
//        try {
//            mActivityTestRule.runOnUiThread(new Runnable() {
//                public void run() {
//                    Collection<Activity> resumedActivities = ActivityLifecycleMonitorRegistry.getInstance().getActivitiesInStage(Stage.RESUMED);
//                    for (Activity act: resumedActivities){
//                        LogUtil.i("Your current activity: " + act.getClass().getName());
//                        currentActivity[0] = act;
//                        break;
//                    }
//                }
//            });
//        } catch (Throwable throwable) {
//            throwable.printStackTrace();
//        }
//
//        return currentActivity[0];
//    }
//
//    @Test
//    public void allActivityTest() {
//        Activity currentActivity = getActivityInstance();
//        IdlingResource idlingResource = new ProgressDialogIdlingResource(currentActivity);
//        Espresso.registerIdlingResources(idlingResource);
//
//        ViewInteraction appCompatEditText = onView(
//                withId(R.id.acet_username));
//        appCompatEditText.perform(scrollTo(), click());
//
//        ViewInteraction appCompatEditText2 = onView(
//                withId(R.id.acet_username));
//        appCompatEditText2.perform(scrollTo(), replaceText("342123193810151809"), closeSoftKeyboard());
//
//        ViewInteraction appCompatEditText3 = onView(
//                allOf(withId(R.id.acet_username), withText("342123193810151809")));
//        appCompatEditText3.perform(pressImeActionButton());
//
//        ViewInteraction appCompatButton = onView(
//                allOf(withId(R.id.bt_password_eye), isDisplayed()));
//        appCompatButton.perform(click());
//
//        ViewInteraction appCompatEditText4 = onView(
//                withId(R.id.acet_password));
//        appCompatEditText4.perform(scrollTo(), click());
//
//        ViewInteraction appCompatEditText5 = onView(
//                withId(R.id.acet_password));
//        appCompatEditText5.perform(scrollTo(), replaceText("a123456"), closeSoftKeyboard());
//
//        ViewInteraction appCompatButton2 = onView(
//                allOf(withId(R.id.bt_login), withText("登录")));
//        appCompatButton2.perform(scrollTo(), click());
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction recyclerView = onView(
//                allOf(withId(R.id.recyclerview),
//                        withParent(allOf(withId(R.id.lay_content_policy),
//                                withParent(withId(R.id.lay_policy)))),
//                        isDisplayed()));
//        recyclerView.perform(actionOnItemAtPosition(0, click()));
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction linearLayout = onView(
//                allOf(withId(R.id.ll_back),
//                        withParent(withId(R.id.toolbar)),
//                        isDisplayed()));
//        linearLayout.perform(closeSoftKeyboard(), click());
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction appCompatTextView = onView(
//                allOf(withId(R.id.tv_policy_more), withText("更多>"),
//                        withParent(withId(R.id.lay_policy))));
//        appCompatTextView.perform(scrollTo(), click());
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction recyclerView2 = onView(
//                allOf(withId(R.id.recyclerview),
//                        withParent(allOf(withId(R.id.lay_content),
//                                withParent(withId(R.id.framelayout)))),
//                        isDisplayed()));
//        recyclerView2.perform(actionOnItemAtPosition(0, click()));
//
//        ViewInteraction linearLayout2 = onView(
//                allOf(withId(R.id.ll_back),
//                        withParent(withId(R.id.toolbar)),
//                        isDisplayed()));
//        linearLayout2.perform(closeSoftKeyboard(), click());
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction linearLayout3 = onView(
//                allOf(withId(R.id.ll_back),
//                        withParent(withId(R.id.toolbar)),
//                        isDisplayed()));
//        linearLayout3.perform(click());
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction appCompatTextView2 = onView(
//                allOf(withId(R.id.tv_remind_family), withText("显示家庭成员提醒>")));
//        appCompatTextView2.perform(scrollTo(), click());
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction recyclerView3 = onView(
//                allOf(withId(R.id.recyclerview),
//                        withParent(allOf(withId(R.id.lay_content),
//                                withParent(withId(R.id.framelayout)))),
//                        isDisplayed()));
//        recyclerView3.perform(actionOnItemAtPosition(1, click()));
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction recyclerView4 = onView(
//                allOf(withId(R.id.recyclerview),
//                        withParent(withId(R.id.lay_content_remind)),
//                        isDisplayed()));
//        recyclerView4.perform(actionOnItemAtPosition(2, click()));
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction linearLayout4 = onView(
//                allOf(withId(R.id.ll_back),
//                        withParent(withId(R.id.toolbar)),
//                        isDisplayed()));
//        linearLayout4.perform(click());
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction linearLayout5 = onView(
//                allOf(withId(R.id.ll_back),
//                        withParent(allOf(withId(R.id.toolbar),
//                                withParent(withId(R.id.topPanel)))),
//                        isDisplayed()));
//        linearLayout5.perform(click());
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction linearLayout6 = onView(
//                allOf(withId(R.id.ll_back),
//                        withParent(withId(R.id.toolbar)),
//                        isDisplayed()));
//        linearLayout6.perform(click());
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction recyclerView5 = onView(
//                allOf(withId(R.id.recyclerview),
//                        withParent(withId(R.id.lay_content_remind)),
//                        isDisplayed()));
//        recyclerView5.perform(actionOnItemAtPosition(0, click()));
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction appCompatTextView3 = onView(
//                allOf(withId(R.id.tv_load_failure_hint), withText("暂无近7天需要执行项目,点我刷新"),
//                        withParent(allOf(withId(R.id.lay_execution_projects_load_failure),
//                                withParent(withId(R.id.framelayout)))),
//                        isDisplayed()));
//        appCompatTextView3.perform(click());
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction linearLayout7 = onView(
//                allOf(withId(R.id.ll_back),
//                        withParent(withId(R.id.toolbar)),
//                        isDisplayed()));
//        linearLayout7.perform(click());
//
//        Util.sleep(TRANSITION_DELAY);
//
////        ViewInteraction roundTextView = onView(
////                allOf(withId(R.id.rtv_msg_tip), isDisplayed()));
////        roundTextView.perform(click());
//        ViewInteraction secondTabView = onView(
//                allOf(withTagValue(new Matcher<Object>() {
//                    @Override
//                    public boolean matches(Object item) {
//                        if (item==(Integer)1){
//                            return true;
//                        }
//                        return false;
//                    }
//
//                    @Override
//                    public void describeMismatch(Object item, Description mismatchDescription) {
//
//                    }
//
//                    @Override
//                    public void _dont_implement_Matcher___instead_extend_BaseMatcher_() {
//
//                    }
//
//                    @Override
//                    public void describeTo(Description description) {
//
//                    }
//                }), isDisplayed())
//        );
//        secondTabView.perform(click());
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction recyclerView6 = onView(
//                allOf(withId(R.id.recyclerview),
//                        withParent(allOf(withId(R.id.srl),
//                                withParent(withId(R.id.framelayout)))),
//                        isDisplayed()));
//        recyclerView6.perform(actionOnItemAtPosition(0, click()));
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction appCompatImageView = onView(
//                allOf(withId(R.id.iv_phone),
//                        withParent(allOf(withId(R.id.ll_top),
//                                withParent(withId(R.id.ll_first))))));
//        appCompatImageView.perform(scrollTo(), click());
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction mDButton = onView(
//                allOf(withId(R.id.md_buttonDefaultNegative), withText("取消"), isDisplayed()));
//        mDButton.perform(click());
//
////        Util.sleep(TRANSITION_DELAY);
////
////        ViewInteraction recyclerView7 = onView(
////                allOf(withId(R.id.id_recyclerview_horizontal), isDisplayed()));
////        recyclerView7.perform(actionOnItemAtPosition(1, click()));
////
////        Util.sleep(TRANSITION_DELAY);
////
////        ViewInteraction linearLayout8 = onView(
////                allOf(withId(R.id.ll_back),
////                        withParent(withId(R.id.toolbar)),
////                        isDisplayed()));
////        linearLayout8.perform(click());
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction relativeLayout = onView(
//                allOf(withId(R.id.rl_execu), isDisplayed()));
//        relativeLayout.perform(click());
//
//        Util.sleep(TRANSITION_DELAY);
//
////        ViewInteraction linearLayout9 = onView(
////                allOf(childAtPosition(
////                        withId(R.id.lv_execued),
////                        2),
////                        isDisplayed()));
////        linearLayout9.perform(click());
////
////        Util.sleep(TRANSITION_DELAY);
////
////        ViewInteraction linearLayout10 = onView(
////                allOf(withId(R.id.ll_back),
////                        withParent(withId(R.id.toolbar))));
////        linearLayout10.perform(scrollTo(), click());
////
////        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction linearLayout11 = onView(
//                allOf(withId(R.id.ll_back),
//                        withParent(withId(R.id.toolbar)),
//                        isDisplayed()));
//        linearLayout11.perform(click());
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction relativeLayout2 = onView(
//                allOf(withId(R.id.rl_accessfile), isDisplayed()));
//        relativeLayout2.perform(click());
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction linearLayout12 = onView(
//                allOf(withId(R.id.ll_back),
//                        withParent(withId(R.id.toolbar)),
//                        isDisplayed()));
//        linearLayout12.perform(click());
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction relativeLayout3 = onView(
//                allOf(withId(R.id.rl_updateinfo), isDisplayed()));
//        relativeLayout3.perform(click());
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction appCompatImageView2 = onView(
//                allOf(withId(R.id.iv_update_head),
//                        withParent(allOf(withId(R.id.ll_idcard),
//                                withParent(withId(R.id.ll_data)))),
//                        isDisplayed()));
//        appCompatImageView2.perform(click());
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction appCompatImageButton = onView(
//                allOf(withContentDescription("Navigate up"),
//                        withParent(withId(R.id.toolbar)),
//                        isDisplayed()));
//        appCompatImageButton.perform(click());
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction linearLayout13 = onView(
//                allOf(withId(R.id.ll_back),
//                        withParent(withId(R.id.toolbar)),
//                        isDisplayed()));
//        linearLayout13.perform(click());
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction linearLayout14 = onView(
//                allOf(withId(R.id.ll_back),
//                        withParent(withId(R.id.toolbar)),
//                        isDisplayed()));
//        linearLayout14.perform(click());
//
//        Util.sleep(TRANSITION_DELAY);
//
////        ViewInteraction roundTextView2 = onView(
////                allOf(withId(R.id.rtv_msg_tip), isDisplayed()));
////        roundTextView2.perform(click());
//        ViewInteraction thirdTabView = onView(allOf(withTagValue(
//                new Matcher<Object>() {
//                    @Override
//                    public boolean matches(Object item) {
//                        if (item==(Integer)2){
//                            return true;
//                        }
//                        return false;
//                    }
//
//                    @Override
//                    public void describeMismatch(Object item, Description mismatchDescription) {
//
//                    }
//
//                    @Override
//                    public void _dont_implement_Matcher___instead_extend_BaseMatcher_() {
//
//                    }
//
//                    @Override
//                    public void describeTo(Description description) {
//
//                    }
//                }
//        )));
//        thirdTabView.perform(click());
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction recyclerView8 = onView(
//                allOf(withId(R.id.recyclerview),
//                        withParent(withId(R.id.lay_content_remind)),
//                        isDisplayed()));
//        recyclerView8.perform(actionOnItemAtPosition(0, click()));
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction linearLayout15 = onView(
//                allOf(withId(R.id.ll_back),
//                        withParent(allOf(withId(R.id.toolbar),
//                                withParent(withId(R.id.topbar)))),
//                        isDisplayed()));
//        linearLayout15.perform(click());
//
//        Util.sleep(TRANSITION_DELAY);
//
////        ViewInteraction roundTextView3 = onView(
////                allOf(withId(R.id.rtv_msg_tip), isDisplayed()));
////        roundTextView3.perform(click());
//        ViewInteraction fourthTabView = onView(allOf(withTagValue(
//                new Matcher<Object>() {
//                    @Override
//                    public boolean matches(Object item) {
//                        if (item==(Integer)3){
//                            return true;
//                        }
//                        return false;
//                    }
//
//                    @Override
//                    public void describeMismatch(Object item, Description mismatchDescription) {
//
//                    }
//
//                    @Override
//                    public void _dont_implement_Matcher___instead_extend_BaseMatcher_() {
//
//                    }
//
//                    @Override
//                    public void describeTo(Description description) {
//
//                    }
//                }
//        )));
//        fourthTabView.perform(click());
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction recyclerView9 = onView(
//                allOf(
////                        withId(R.id.recyclerview),
//                        withTagValue(new Matcher<Object>() {
//                            @Override
//                            public boolean matches(Object item) {
//                                if (item==(Integer)10){
//                                    return true;
//                                }
//                                return false;
//                            }
//
//                            @Override
//                            public void describeMismatch(Object item, Description mismatchDescription) {
//
//                            }
//
//                            @Override
//                            public void _dont_implement_Matcher___instead_extend_BaseMatcher_() {
//
//                            }
//
//                            @Override
//                            public void describeTo(Description description) {
//
//                            }
//                        })));
//        recyclerView9.perform(actionOnItemAtPosition(0, click()));
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction appCompatTextView4 = onView(
//                withId(R.id.addseverpake_btn));
//        appCompatTextView4.perform(scrollTo(), click());
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction recyclerView10 = onView(
//                allOf(withId(R.id.recyclerview), isDisplayed()));
//        recyclerView10.perform(actionOnItemAtPosition(0, click()));
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction linearLayout16 = onView(
//                allOf(withId(R.id.ll_back),
//                        withParent(withId(R.id.toolbar)),
//                        isDisplayed()));
//        linearLayout16.perform(click());
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction recyclerView11 = onView(
//                allOf(withId(R.id.recyclerview), isDisplayed()));
//        recyclerView11.perform(actionOnItemAtPosition(0, click()));
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction linearLayout17 = onView(
//                allOf(withId(R.id.ll_back),
//                        withParent(withId(R.id.toolbar)),
//                        isDisplayed()));
//        linearLayout17.perform(click());
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction recyclerView12 = onView(
//                allOf(withId(R.id.recyclerview), isDisplayed()));
//        recyclerView12.perform(actionOnItemAtPosition(0, click()));
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction linearLayout18 = onView(
//                allOf(withId(R.id.ll_back),
//                        withParent(withId(R.id.toolbar)),
//                        isDisplayed()));
//        linearLayout18.perform(closeSoftKeyboard(), click());
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction recyclerView13 = onView(
//                allOf(withId(R.id.recyclerview), isDisplayed()));
//        recyclerView13.perform(actionOnItemAtPosition(0, click()));
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction linearLayout19 = onView(
//                allOf(withId(R.id.ll_back),
//                        withParent(withId(R.id.toolbar)),
//                        isDisplayed()));
//        linearLayout19.perform(click());
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction appCompatTextView5 = onView(
//                allOf(withText("其他"), isDisplayed()));
//        appCompatTextView5.perform(click());
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction linearLayout20 = onView(
//                allOf(withId(R.id.ll_back),
//                        withParent(allOf(withId(R.id.toolbar),
//                                withParent(withId(R.id.layone)))),
//                        isDisplayed()));
//        linearLayout20.perform(click());
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction linearLayout21 = onView(
//                allOf(withId(R.id.ll_back),
//                        withParent(allOf(withId(R.id.toolbar),
//                                withParent(withId(R.id.topPanel)))),
//                        isDisplayed()));
//        linearLayout21.perform(click());
//
//        Util.sleep(TRANSITION_DELAY);
//
//        ViewInteraction recyclerView14 = onView(
//                allOf(withTagValue(new Matcher<Object>() {
//                    @Override
//                    public boolean matches(Object item) {
//                        if (item==(Integer)10){
//                            return true;
//                        }
//                        return false;
//                    }
//
//                    @Override
//                    public void describeMismatch(Object item, Description mismatchDescription) {
//
//                    }
//
//                    @Override
//                    public void _dont_implement_Matcher___instead_extend_BaseMatcher_() {
//
//                    }
//
//                    @Override
//                    public void describeTo(Description description) {
//
//                    }
//                })));
//        recyclerView14.perform(actionOnItemAtPosition(1, click()));
//
